criado o paragrafo com o conteúdo solicitado

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <h1> Minha lista de tarefas </h1>
     </header>
     <main>
-        testando
+        <p  id="funcionamento">
+            Clique duas vezes em um item para marcá-lo como completo
+        </p>
     </main>
 
     <style src="script.js"></style>
