--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         </p>
 
         <input id="texto-tarefa" type="text" />
-        
+
+        <ol id="lista-tarefas"> 
+
+        </ol>
     </main>
 
     <style src="script.js"></style>
