--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
         <p  id="funcionamento">
             Clique duas vezes em um item para marcá-lo como completo
         </p>
-
-        <input id="texto-tarefa" type="text" />
+        <section> 
+            <input id="texto-tarefa" type="text" />
+            <button id="criar-tarefa">
+                add tarefa
+            </button>
+        </section>
 
         <ol id="lista-tarefas"> 
 
         </ol>
     </main>
 
-    <style src="script.js"></style>
+    <script src="./script.js"></script>
 </body>
 </html>
