--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header id="Cabecalho" >
-        <h1> Minha lista de tarefas </h1>
+        Minha lista de tarefas 
     </header>
     <main>
         <p  id="funcionamento">
