corrigido o texto do header²

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header id="Cabecalho" >
-        Minha lista de tarefas 
+        Minha Lista de Tarefas 
     </header>
     <main>
         <p  id="funcionamento">
