--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Todo-list</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Project Todo-list</title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
+
 <body>
-    <header id="Cabecalho" >
-        Minha Lista de Tarefas 
-    </header>
-    <main>
-        <p  id="funcionamento">
-            Clique duas vezes em um item para marcá-lo como completo
-        </p>
-        <section> 
-            <input id="texto-tarefa" type="text" />
-            <button id="criar-tarefa">
-                add tarefa
-            </button>
-        </section>
+  <header id="Cabecalho">
+    Minha Lista de Tarefas
+  </header>
+  <main>
+    <p id="funcionamento">
+      Clique duas vezes em um item para marcá-lo como completo
+    </p>
+    <section class="sessao-tarefa">
+      <input id="texto-tarefa" type="text" />
+      <button id="criar-tarefa">
+        ADICIONAR TAREFA
+      </button>
+    </section>
+    <section class="lista-tarefas-section">
+      <ol id="lista-tarefas">
 
-        <ol id="lista-tarefas"> 
+      </ol>
+    </section>
+  </main>
 
-        </ol>
-    </main>
-
-    <script src="./script.js"></script>
+  <script src="./script.js"></script>
 </body>
+
 </html>
